feat(spring): upgrade to 6.0.0 release